@@ -54,6 +54,8 @@ TODO: cursor restore/rendition restore on rmcup
           tput init/tput reset, for older urxvts.
         - partial/full clear screens did cause flickering and possibly pixel
           droppings when urxvt viewed the scorllback buffer.
+        - use current rendition style in DCH sequence.
+        - the 132/80 mode switch no longer forces a screen reset.
 
 9.05 Sun Jun 15 20:09:20 CEST 2008
 	- new option --cd/chdir to set the starting working directory.
